fix:css shift while editing text in fabricjs

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -8,6 +8,10 @@
   }
 }
 
+textarea[data-fabric-hiddentextarea] {
+  position: fixed !important;
+}
+
 .nav-bar ul {
   list-style: none;
   background-color: rgb(29, 56, 207);
